k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: compilehub-server-service
  namespace: compilehub
  labels:
    app: compilehub-server
spec:
  type: NodePort
  selector:
    app: compilehub-server
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      nodePort: 30007 # Matches the Target Group port in terraform/alb.tf
      protocol: TCP
